# allthethings

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  tasks.py  tox.ini
.github/workflows/: ci.yml
allthethings/core/: __init__.py  __main__.py  base.py  list.py  projects.py  runners.py  scripts.py
tests/: test_allthethings.py
tests/core/: conftest.py  test_core.py  test_projects.py  test_runners.py
