[tool.poetry]
name = "allthethings"
version = "0.1.0"
description = "Manipulate multiple repositories in batch"
authors = ["Oleksandr Fedorov <a.g.fedorof@gmail.com>"]
license = "MIT"
packages = [
    { include = "allthethings" },
]

[tool.poetry.dependencies]
python = "^3.7"
cleo = "^0.7.6"
toml = "^0.10.0"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-cov = "^2.8"
black = {version = "^19.10b0", allow-prereleases = true}
wemake-python-styleguide = "^0.14.0"
invoke = "^1.3"
safety = "^1.8"
mypy = "^0.780"

[tool.poetry.scripts]
allthethings = 'allthethings.core.__main__:application.run'

[tool.poetry.plugins."allthethings.command"]
"test" = "assetregistry.core:Test"

[tool.isort]
line_length = 100

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
